--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,26 @@
 	<parent>
 		<groupId>com.s3s3l.spring-cloud</groupId>
 		<artifactId>spring-cloud-parent</artifactId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.5-SNAPSHOT</version>
 	</parent>
-	
+
+	<dependencies>
+		<!-- Spring Boot -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+		</dependency>
+	</dependencies>
+
 	<distributionManagement>
 		<repository>
 			<id>s3s3l-nexus</id>
